modified text message

--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -254,7 +254,7 @@
         </tr>
 
         <tr>
-          <td>Errorstate (press to show error)</td>
+          <td>Errorstate (click for details)</td>
           <td><button id="ClearTECError" disabled>Clear</button></td>
           <td><button id="ErrorState1" disabled>wait </button></td>
           <td><button id="ErrorState2" disabled>wait </button></td>
