--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -73,15 +73,15 @@
       <div id="envDiv" style="background-color:MediumSeaGreen" float="center">
         <table>
           <tr>
-            <td>Air</td>
+            <td>Air [°C]</td>
             <td id="TempAir" style="text-align:right;">0 </td>
           </tr>
           <tr>
-            <td>Rel. Humidity</td>
+            <td>Rel. Humidity [%]</td>
             <td id="RelHum" style="text-align:right;">0 </td>
           </tr>
           <tr>
-            <td>Dew point</td>
+            <td>Dew point [°C]</td>
             <td id="DP" style="text-align:right;">0 </td>
           </tr>
           <tr>
@@ -89,7 +89,7 @@
             <td></td>
           </tr>
           <tr>
-            <td>Water</td>
+            <td>Water [°C]</td>
             <td id="TempWater" style="text-align:right;">0 </td>
           </tr>
         </table>
@@ -232,7 +232,7 @@
         </tr>
 
         <tr>
-          <td> Temp_Set [C] </td>
+          <td> Temp_Set [°C] </td>
           <td> <input id="Temp_Set0" maxlength="4" size="5" value="all"  onchange="chgTemp_Set(0,this.value)"> </td>
           <td> <input id="Temp_Set1" maxlength="4" size="5" value="wait" onchange="chgTemp_Set(1,this.value)"> </td>
           <td> <input id="Temp_Set2" maxlength="4" size="5" value="wait" onchange="chgTemp_Set(2,this.value)"> </td>
@@ -245,7 +245,7 @@
         </tr>
 
         <tr>
-          <td>Temp_M [deg C]</td>
+          <td>Temp_M [°C]</td>
           <td> </td>
           <td id="Temp_M1">wait </td>
           <td id="Temp_M2">wait </td>
