add Omega symbol and other units

--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -271,7 +271,7 @@
         </tr>
 
         <tr>
-          <td>Supply_U</td>
+          <td>Supply_U [V]</td>
           <td> </td>
           <td id="Supply_U1">wait </td>
           <td id="Supply_U2">wait </td>
@@ -284,7 +284,7 @@
         </tr>
 
         <tr>
-          <td>Supply_P</td>
+          <td>Supply_P [W]</td>
           <td> </td>
           <td id="Supply_P1">wait </td>
           <td id="Supply_P2">wait </td>
@@ -297,7 +297,7 @@
         </tr>
 
         <tr>
-          <td>Peltier_U</td>
+          <td>Peltier_U [V]</td>
           <td> </td>
           <td id="Peltier_U1">wait </td>
           <td id="Peltier_U2">wait </td>
@@ -310,7 +310,7 @@
         </tr>
 
         <tr>
-          <td>Peltier_P</td>
+          <td>Peltier_P [W]</td>
           <td> </td>
           <td id="Peltier_P1">wait </td>
           <td id="Peltier_P2">wait </td>
@@ -323,7 +323,7 @@
         </tr>
 
         <tr>
-          <td>Peltier_I</td>
+          <td>Peltier_I [A]</td>
           <td> </td>
           <td id="Peltier_I1">wait </td>
           <td id="Peltier_I2">wait </td>
@@ -336,7 +336,7 @@
         </tr>
 
         <tr>
-          <td>Peltier_R</td>
+          <td>Peltier_R [Ω]</td>
           <td> </td>
           <td id="Peltier_R1">wait </td>
           <td id="Peltier_R2">wait </td>
