--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -15,6 +15,9 @@
       }
       .mycontainer > div {
           width:20%;
+          padding: 10px;
+          margin: 5px;
+          border-radius: 4px;
       }
       .button {
           border: none;
