--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -18,6 +18,7 @@
           padding: 10px;
           margin: 5px;
           border-radius: 4px;
+          box-sizing: border-box;
       }
       .button {
           border: none;
