change font color to black

--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -154,7 +154,7 @@
         CSV data:
         <button id="getcsv" disabled>Get CSV data</button>
         <br><br>
-        <button id="startReconditioning" style="background-color:#FF6B6B; color:white; font-weight:bold">Start Reconditioning</button>
+        <button id="startReconditioning" style="background-color:#FF6B6B; color:black; font-weight:bold">Start Reconditioning</button>
       </div>
 
       <div id="envDiv" style="background-color:MediumSeaGreen" float="center">
