--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -111,6 +111,9 @@
         <div class="alert-content">
             <h2>⚠️ Reconditioning in Progress</h2>
             <p>Please wait while the system reconditions...</p>
+            <p>Target temperature: 90 °C</p>
+            <p>Target time: 10 minutes</p>
+            <p>Cool down until Heater status is 0</p>
             <div id="alertStatus" style="font-size: 18px; margin-top: 20px; padding: 15px; background-color: rgba(255,255,255,0.2); border-radius: 5px;">
                 <p style="margin: 5px 0;"><strong>Air Temperature:</strong> <span id="alertAirTemp">--</span> °C</p>
                 <p style="margin: 5px 0;"><strong>Heater Status:</strong> <span id="alertHeaterStatus">--</span></p>
